Fix mirror button not showing on WebKitGTK

--- a/examples/telecomp/ui/style.css
+++ b/examples/telecomp/ui/style.css
@@ -24,6 +24,7 @@ a {
 }
 
 #main {
+    position: relative;
     display: flex;
     flex-direction: column;
     height: 100%;
